--- a/Usov alex-rightToTarget/Base.lproj/Main.storyboard
+++ b/Usov alex-rightToTarget/Base.lproj/Main.storyboard
@@ -70,6 +70,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4YV-FQ-JO9" secondAttribute="trailing" constant="20" id="zeh-6l-6R9"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="dMs-6R-c8r"/>
                     <connections>
                         <outlet property="checkNumberButtonOutlet" destination="41l-zQ-xOr" id="znh-YS-aY1"/>
                         <outlet property="humanLabel" destination="2Ym-W3-pRd" id="hRq-3u-mnZ"/>
@@ -79,7 +80,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-125" y="55"/>
+            <point key="canvasLocation" x="-142" y="-87"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ulm-XM-Ev2">
@@ -88,13 +89,56 @@
                     <view key="view" contentMode="scaleToFill" id="JrR-rN-hx5">
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="77" translatesAutoresizingMaskIntoConstraints="NO" id="w5N-21-W0V">
+                                <rect key="frame" x="232.5" y="130.5" width="431" height="132"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coe HEX Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDq-N7-igx">
+                                        <rect key="frame" x="146.5" y="0.0" width="138" height="24"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="pVB-Wq-kAi">
+                                        <rect key="frame" x="0.0" y="101" width="431" height="31"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k2z-qp-PHF">
+                                                <rect key="frame" x="0.0" y="0.0" width="83" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="gray" title="Choice A"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6SP-H8-a8g">
+                                                <rect key="frame" x="116" y="0.0" width="83" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="gray" title="Choice B"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AwK-KX-xk2">
+                                                <rect key="frame" x="232" y="0.0" width="83" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="gray" title="Choice C"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RGi-kT-UCO">
+                                                <rect key="frame" x="348" y="0.0" width="83" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="gray" title="Choice D"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Qrd-Hs-FnB"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="w5N-21-W0V" firstAttribute="centerY" secondItem="Qrd-Hs-FnB" secondAttribute="centerY" id="DTP-M1-Ido"/>
+                            <constraint firstItem="w5N-21-W0V" firstAttribute="centerX" secondItem="Qrd-Hs-FnB" secondAttribute="centerX" id="MDd-mW-lCw"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="MBC-j5-c1t"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IkS-zB-I2d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-125" y="1222"/>
+            <point key="canvasLocation" x="-143" y="964"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="azs-sZ-G1X">
@@ -114,6 +158,9 @@
                                         <buttonConfiguration key="configuration" style="gray" title="FIND NUMBER" cornerStyle="large" titleAlignment="center">
                                             <fontDescription key="titleFontDescription" type="system" weight="black" pointSize="20"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <segue destination="BYZ-38-t0r" kind="show" id="QGQ-0H-XKb"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⬅️выбери ИГРУ➡️" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mv1-hT-Jgs">
                                         <rect key="frame" x="199.5" y="0.0" width="173.5" height="38"/>
@@ -128,6 +175,9 @@
                                         <buttonConfiguration key="configuration" style="gray" title="FIND COLOR" subtitle="" cornerStyle="large" titleAlignment="center">
                                             <fontDescription key="titleFontDescription" type="system" weight="black" pointSize="20"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <segue destination="AJA-Qn-ogR" kind="show" id="Sau-MK-Q26"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
